# Frieza

./: .gitignore  AGENTS.md  README.md  codex.json  pyproject.toml  requirements.txt  setup.sh
docs/: gadget_repack_playbook.md  hardened_attack_strategy.md
hooks/: android_unpinning.js  anti_instrumentation_basic.js  environment_cloak_basic.js  native_runtime_baseline.js  observe_attestation_cadence.js  observe_attestation_only.js  observe_trust_flow.js
mcp-server/: README.md
mcp-server/src/apk_intercept_mcp/: __init__.py  server.py
profiles/: hook_profiles.json
scripts/: _workspace.ps1  build_hook_bundle.ps1  classify_runtime_block.ps1  decode_play_integrity_token.ps1  generate_native_hook_plan.ps1  healthcheck.ps1  patch_nsc_and_repack.ps1  profile_apk.ps1  run_static_lief_scan.ps1  run_trust_demo.ps1  start_frida_capture.ps1  start_gadget_capture.ps1  start_hardened_session.ps1  start_mcp_server.ps1  start_mitm.ps1  start_native_intercept_session.ps1  start_trust_adb_bridge.ps1  start_trust_server.ps1
src/apk_intercept/: __init__.py  cli.py  gadget_repack.py  workspace.py
static-lief/: README.md
static-lief/src/apk_static_lief/: __init__.py  certinfo.py  cli.py  decompile.py  manifest.py  obfuscation.py  scanner.py  vulnscan.py
tests/: test_imports.py  test_workspace_bootstrap.py
trust-e2e/: README.md
trust-e2e/data/: device_registry.example.json  overrides.json
trust-e2e/policy/: policy.json
trust-e2e/src/trust_e2e/: __init__.py  config.py  crypto.py  engine.py  play_integrity.py  server.py  simulator.py  store.py
