[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frieza"
version = "0.3.0"
description = "Authorized Android APK static and dynamic analysis toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "lief>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
frieza = "apk_intercept.cli:main"

[tool.setuptools.packages]
find = { where = ["src", "static-lief/src", "trust-e2e/src", "mcp-server/src"] }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
